// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<table
  class="rdp-table"
  role="grid"
>
  <thead
    class="rdp-head"
  >
    <tr
      class="rdp-head_row"
    >
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          Su
        </span>
        <span
          class="rdp-vhidden"
        >
          Sunday
        </span>
      </th>
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          Mo
        </span>
        <span
          class="rdp-vhidden"
        >
          Monday
        </span>
      </th>
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          Tu
        </span>
        <span
          class="rdp-vhidden"
        >
          Tuesday
        </span>
      </th>
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          We
        </span>
        <span
          class="rdp-vhidden"
        >
          Wednesday
        </span>
      </th>
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          Th
        </span>
        <span
          class="rdp-vhidden"
        >
          Thursday
        </span>
      </th>
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          Fr
        </span>
        <span
          class="rdp-vhidden"
        >
          Friday
        </span>
      </th>
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          Sa
        </span>
        <span
          class="rdp-vhidden"
        >
          Saturday
        </span>
      </th>
    </tr>
  </thead>
  <tbody
    class="rdp-tbody"
  >
    <tr
      class="rdp-row"
    >
      <td
        class="rdp-cell"
      />
      <td
        class="rdp-cell"
      />
      <td
        class="rdp-cell"
      />
      <td
        class="rdp-cell"
      />
      <td
        class="rdp-cell"
      />
      <td
        class="rdp-cell"
      />
      <td
        class="rdp-cell"
      >
        <div
          aria-label="1st February 2020 (Saturday)"
          class="rdp-day"
        >
          1
        </div>
      </td>
    </tr>
    <tr
      class="rdp-row"
    >
      <td
        class="rdp-cell"
      >
        <div
          aria-label="2nd February 2020 (Sunday)"
          class="rdp-day"
        >
          2
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="3rd February 2020 (Monday)"
          class="rdp-day"
        >
          3
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="4th February 2020 (Tuesday)"
          class="rdp-day"
        >
          4
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="5th February 2020 (Wednesday)"
          class="rdp-day"
        >
          5
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="6th February 2020 (Thursday)"
          class="rdp-day"
        >
          6
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="7th February 2020 (Friday)"
          class="rdp-day"
        >
          7
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="8th February 2020 (Saturday)"
          class="rdp-day"
        >
          8
        </div>
      </td>
    </tr>
    <tr
      class="rdp-row"
    >
      <td
        class="rdp-cell"
      >
        <div
          aria-label="9th February 2020 (Sunday)"
          class="rdp-day"
        >
          9
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="10th February 2020 (Monday)"
          class="rdp-day"
        >
          10
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="11th February 2020 (Tuesday)"
          class="rdp-day"
        >
          11
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="12th February 2020 (Wednesday)"
          class="rdp-day"
        >
          12
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="13th February 2020 (Thursday)"
          class="rdp-day"
        >
          13
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="14th February 2020 (Friday)"
          class="rdp-day"
        >
          14
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="15th February 2020 (Saturday)"
          class="rdp-day"
        >
          15
        </div>
      </td>
    </tr>
    <tr
      class="rdp-row"
    >
      <td
        class="rdp-cell"
      >
        <div
          aria-label="16th February 2020 (Sunday)"
          class="rdp-day"
        >
          16
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="17th February 2020 (Monday)"
          class="rdp-day"
        >
          17
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="18th February 2020 (Tuesday)"
          class="rdp-day"
        >
          18
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="19th February 2020 (Wednesday)"
          class="rdp-day"
        >
          19
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="20th February 2020 (Thursday)"
          class="rdp-day"
        >
          20
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="21st February 2020 (Friday)"
          class="rdp-day"
        >
          21
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="22nd February 2020 (Saturday)"
          class="rdp-day"
        >
          22
        </div>
      </td>
    </tr>
    <tr
      class="rdp-row"
    >
      <td
        class="rdp-cell"
      >
        <div
          aria-label="23rd February 2020 (Sunday)"
          class="rdp-day"
        >
          23
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="24th February 2020 (Monday)"
          class="rdp-day"
        >
          24
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="25th February 2020 (Tuesday)"
          class="rdp-day"
        >
          25
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="26th February 2020 (Wednesday)"
          class="rdp-day"
        >
          26
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="27th February 2020 (Thursday)"
          class="rdp-day"
        >
          27
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="28th February 2020 (Friday)"
          class="rdp-day"
        >
          28
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="29th February 2020 (Saturday)"
          class="rdp-day"
        >
          29
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`when showing the week numbers should render correctly 1`] = `
<table
  class="rdp-table"
  role="grid"
>
  <thead
    class="rdp-head"
  >
    <tr
      class="rdp-head_row"
    >
      <th
        class="rdp-head_cell"
        scope="col"
      />
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          Su
        </span>
        <span
          class="rdp-vhidden"
        >
          Sunday
        </span>
      </th>
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          Mo
        </span>
        <span
          class="rdp-vhidden"
        >
          Monday
        </span>
      </th>
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          Tu
        </span>
        <span
          class="rdp-vhidden"
        >
          Tuesday
        </span>
      </th>
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          We
        </span>
        <span
          class="rdp-vhidden"
        >
          Wednesday
        </span>
      </th>
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          Th
        </span>
        <span
          class="rdp-vhidden"
        >
          Thursday
        </span>
      </th>
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          Fr
        </span>
        <span
          class="rdp-vhidden"
        >
          Friday
        </span>
      </th>
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          Sa
        </span>
        <span
          class="rdp-vhidden"
        >
          Saturday
        </span>
      </th>
    </tr>
  </thead>
  <tbody
    class="rdp-tbody"
  >
    <tr
      class="rdp-row"
    >
      <td
        class="rdp-cell"
      >
        <span
          class="rdp-weeknumber"
        >
          5
        </span>
      </td>
      <td
        class="rdp-cell"
      />
      <td
        class="rdp-cell"
      />
      <td
        class="rdp-cell"
      />
      <td
        class="rdp-cell"
      />
      <td
        class="rdp-cell"
      />
      <td
        class="rdp-cell"
      />
      <td
        class="rdp-cell"
      >
        <div
          aria-label="1st February 2020 (Saturday)"
          class="rdp-day"
        >
          1
        </div>
      </td>
    </tr>
    <tr
      class="rdp-row"
    >
      <td
        class="rdp-cell"
      >
        <span
          class="rdp-weeknumber"
        >
          6
        </span>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="2nd February 2020 (Sunday)"
          class="rdp-day"
        >
          2
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="3rd February 2020 (Monday)"
          class="rdp-day"
        >
          3
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="4th February 2020 (Tuesday)"
          class="rdp-day"
        >
          4
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="5th February 2020 (Wednesday)"
          class="rdp-day"
        >
          5
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="6th February 2020 (Thursday)"
          class="rdp-day"
        >
          6
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="7th February 2020 (Friday)"
          class="rdp-day"
        >
          7
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="8th February 2020 (Saturday)"
          class="rdp-day"
        >
          8
        </div>
      </td>
    </tr>
    <tr
      class="rdp-row"
    >
      <td
        class="rdp-cell"
      >
        <span
          class="rdp-weeknumber"
        >
          7
        </span>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="9th February 2020 (Sunday)"
          class="rdp-day"
        >
          9
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="10th February 2020 (Monday)"
          class="rdp-day"
        >
          10
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="11th February 2020 (Tuesday)"
          class="rdp-day"
        >
          11
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="12th February 2020 (Wednesday)"
          class="rdp-day"
        >
          12
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="13th February 2020 (Thursday)"
          class="rdp-day"
        >
          13
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="14th February 2020 (Friday)"
          class="rdp-day"
        >
          14
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="15th February 2020 (Saturday)"
          class="rdp-day"
        >
          15
        </div>
      </td>
    </tr>
    <tr
      class="rdp-row"
    >
      <td
        class="rdp-cell"
      >
        <span
          class="rdp-weeknumber"
        >
          8
        </span>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="16th February 2020 (Sunday)"
          class="rdp-day"
        >
          16
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="17th February 2020 (Monday)"
          class="rdp-day"
        >
          17
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="18th February 2020 (Tuesday)"
          class="rdp-day"
        >
          18
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="19th February 2020 (Wednesday)"
          class="rdp-day"
        >
          19
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="20th February 2020 (Thursday)"
          class="rdp-day"
        >
          20
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="21st February 2020 (Friday)"
          class="rdp-day"
        >
          21
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="22nd February 2020 (Saturday)"
          class="rdp-day"
        >
          22
        </div>
      </td>
    </tr>
    <tr
      class="rdp-row"
    >
      <td
        class="rdp-cell"
      >
        <span
          class="rdp-weeknumber"
        >
          9
        </span>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="23rd February 2020 (Sunday)"
          class="rdp-day"
        >
          23
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="24th February 2020 (Monday)"
          class="rdp-day"
        >
          24
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="25th February 2020 (Tuesday)"
          class="rdp-day"
        >
          25
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="26th February 2020 (Wednesday)"
          class="rdp-day"
        >
          26
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="27th February 2020 (Thursday)"
          class="rdp-day"
        >
          27
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="28th February 2020 (Friday)"
          class="rdp-day"
        >
          28
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          aria-label="29th February 2020 (Saturday)"
          class="rdp-day"
        >
          29
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`when using custom components should render correctly 1`] = `
<table
  class="rdp-table"
  role="grid"
>
  <thead>
    <tr>
      <td>
        CustomHead
      </td>
    </tr>
  </thead>
  <tbody
    class="rdp-tbody"
  >
    <tr>
      <td>
        CustomRow
      </td>
    </tr>
    <tr>
      <td>
        CustomRow
      </td>
    </tr>
    <tr>
      <td>
        CustomRow
      </td>
    </tr>
    <tr>
      <td>
        CustomRow
      </td>
    </tr>
    <tr>
      <td>
        CustomRow
      </td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td>
        CustomFooter
      </td>
    </tr>
  </tfoot>
</table>
`;
